--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 }
 #header{
     background: var(--section-color);
+    height:37rem;
 }
 .menubar-item{
     margin-left: 1rem;
@@ -51,3 +52,61 @@ li.nav-item.nav-list:hover a{
 }
 
 /* header style part end */
+
+/* ====== Start hero Section ======= */
+
+.hero_title {
+    margin-top: 1rem;
+    font-weight: 700;
+    padding-right: 15rem;
+}
+.hero_subtitle {
+    margin-top: 20px;
+    padding-right: 6rem;
+}
+
+.hero_contact {
+    display: inline-block;
+    padding: 10px 40px;
+    background-color: var(--primary-color);
+    border-radius: 35px;
+    margin-top: 35px;
+    margin-bottom: 2rem;
+}
+.hero_contact:hover {
+   
+    background-color: #5a1eb5 !important;
+    transition: 0.5s ease-in-out;
+    
+}
+.hero_slider{
+    width: 24rem;
+    border: 7px solid #7b57b2;
+    border-radius: 100%;
+    overflow: hidden;
+    margin-bottom: 5rem;
+    position: relative;
+}
+.btn_next{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    margin-top: -134px;
+    position: absolute;
+    margin-left: 16.2rem;
+    background-color: var(--primary-color);
+    border: none;
+    color: aliceblue;
+}
+.btn_prev{
+    width: 45px;
+    height: 45px;
+    margin-top: -107px;
+    position: absolute;
+    border-radius: 50%;
+    margin-left: 13.5rem;
+    background: aliceblue;
+    color: #000000;
+    border: none;
+}
+/* ====== End hero Section ======= */
